[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jx3api"
version  = "2024.12.18"
dependencies = ["aiohttp"]
requires-python = ">=3"
description = "The Python SDK to the JX3API"
readme = "README.md"
license = {text = "MIT License"}

[tool.hatch.build.targets.wheel]
packages = ["jx3api"]
